--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,34 @@
 # Server
 NODE_ENV=development
 PORT=3001
+
+# Client
 CLIENT_URL=http://localhost:5173
 
 # Database
-MONGODB_URI=mongodb://admin:password123@localhost:27017/budie?authSource=admin
+MONGODB_URI=mongodb://localhost:27017/budie
 REDIS_URL=redis://localhost:6379
 
-# JWT Secrets
-JWT_SECRET=your-super-secret-jwt-key-change-this
-JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this
+# JWT
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
 # Encryption
 ENCRYPTION_KEY=your-32-character-encryption-key
 
-# OAuth (to be configured later)
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-MICROSOFT_CLIENT_ID=
-MICROSOFT_CLIENT_SECRET=
-
-# Email
-EMAIL_FROM=noreply@budie.app
-SENDGRID_API_KEY=
-
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Email (for future use)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password
+
+# External APIs (for future use)
+OPENAI_API_KEY=your-openai-api-key
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
