--- a/.gitignore
+++ b/.gitignore
@@ -3,37 +3,72 @@ node_modules/
 .pnp
 .pnp.js
 
-# Production
-build/
-dist/
+# Testing
+coverage/
+.nyc_output
 
-# Misc
-.DS_Store
+# Production builds
+dist/
+build/
+
+# Environment files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-logs/
-
-# Editor
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+.DS_Store
 
-# Testing
-coverage/
-.nyc_output/
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
 # TypeScript
 *.tsbuildinfo
 
-# Docker
-docker-compose.override.yml
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional stylelint cache
+.stylelintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Yarn
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+
+# Temporary files
+tmp/
+temp/
+
+# OS files
+Thumbs.db
+
+# Docker volumes (local development)
+mongodb_data/
+redis_data/
