--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.0",
+    "redis": "^5.5.6",
     "socket.io": "^4.7.2",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -35,8 +37,9 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.4.5",
+    "@types/redis": "^4.0.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.45.0",
