--- a/server/package.json
+++ b/server/package.json
@@ -1,52 +1,47 @@
 {
-  "name": "@budie/server",
-  "version": "1.0.0",
-  "private": true,
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "nodemon --exec ts-node -r dotenv/config src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint src --ext .ts"
-  },
-  "dependencies": {
-    "@budie/shared": "1.0.0",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^6.10.0",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.0.0",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.4.0",
-    "redis": "^5.5.6",
-    "socket.io": "^4.7.2",
-    "winston": "^3.10.0",
-    "zod": "^3.25.67"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/compression": "^1.7.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.4.5",
-    "@types/redis": "^4.0.10",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
-    "jest": "^29.6.1",
-    "nodemon": "^3.0.1",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
-  }
+    "name":  "@budie/server",
+    "version":  "1.0.0",
+    "description":  "Budie server",
+    "main":  "dist/index.js",
+    "scripts":  {
+                    "lint:fix":  "eslint src --ext .ts --fix",
+                    "lint":  "eslint src --ext .ts",
+                    "build":  "tsc",
+                    "dev":  "nodemon --exec ts-node src/index.ts",
+                    "start":  "node dist/index.js"
+                },
+    "keywords":  [
+
+                 ],
+    "author":  "",
+    "license":  "ISC",
+    "dependencies":  {
+                         "@budie/shared":  "^1.0.0",
+                         "bcryptjs":  "^2.4.3",
+                         "compression":  "^1.8.0",
+                         "cors":  "^2.8.5",
+                         "dotenv":  "^16.5.0",
+                         "express":  "^4.21.2",
+                         "express-rate-limit":  "^7.5.1",
+                         "express-validator":  "^7.2.1",
+                         "helmet":  "^7.2.0",
+                         "jsonwebtoken":  "^9.0.2",
+                         "mongoose":  "^8.16.0",
+                         "redis":  "^4.7.1",
+                         "socket.io":  "^4.8.1",
+                         "winston":  "^3.17.0",
+                         "zod":  "^3.25.67"
+                     },
+    "devDependencies":  {
+                            "@types/bcryptjs":  "^2.4.6",
+                            "@types/compression":  "^1.8.1",
+                            "@types/cors":  "^2.8.19",
+                            "@types/express":  "^4.17.23",
+                            "@types/jsonwebtoken":  "^9.0.10",
+                            "@types/mongoose":  "^5.11.97",
+                            "@types/node":  "^20.19.1",
+                            "nodemon":  "^3.1.10",
+                            "ts-node":  "^10.9.2",
+                            "typescript":  "^5.8.3"
+                        }
 }
